--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,31 @@ header {
 
 /*-----------------------------HomePage-HeroImage---*/
 
+.hero-image {
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+}
+
+
+
+.btn-home-deal {
+    position: absolute;
+    right:20%;
+    bottom: 10%;
+    width: 240px;
+    height: 60px;
+    color:#faf6f6ce;
+    background-color:#b10303;
+    font-size: 20px;
+    border-radius: 20%;
+}
+
+.btn-home-deal:hover {
+    color:#c5b720;
+}
+
+
 
 
 /*-----------------------------HomePage-Testimonials---*/
