--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,8 +106,6 @@ header {
     overflow: hidden;
 }
 
-
-
 .btn-home-deal {
     position: absolute;
     right:20%;
@@ -152,6 +150,7 @@ header {
     border-radius: 10%;
     border-color: #b10303;
     margin: 20px;
+    overflow: hidden;
 }
 
 .review p {
