--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,3 +192,56 @@ header {
     font-size:50px;
     color:#c5b720;
 }
+
+/*-----------------------------Destinations Page---*/
+
+.section-container {
+    width: 100%;
+    height: 500px;
+}
+
+.destinations-header {
+    font-size: 50px;
+    font-weight: bold;
+    color: #b10303;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    text-align:-webkit-center;
+    padding-top:20px;
+}
+
+.deal-type-container {
+    position: relative;
+    width: 400px;
+    height: 400px;
+}
+
+.deal-type-container img {
+    position: absolute;
+    width: 360px;
+    height: 360px;
+    overflow: hidden;
+}
+
+.type-caption {
+    position: absolute;
+    font-size: 26px;
+    color: #faf6f6ce;
+}
+
+.btn-see-deals {
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    color:#faf6f6ce;
+    background-color:#b10303;
+    font-size: 18px;
+    border-radius: 20%;
+    bottom: 50px;
+    right: 140px;
+
+}
+
+.btn-see-deals:hover {
+    color: #c5b720;
+}
