--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,3 +245,56 @@ header {
 .btn-see-deals:hover {
     color: #c5b720;
 }
+
+.multi-type-container img {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    
+}
+
+/*-----------------------------Destinations Page/ Flip Card, Code obtained https://www.w3schools.com/howto/howto_css_flip_card.asp, editted to suit my website needs---*/
+
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px; 
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+    border-radius: 50%;
+  }
+  
+  .flip-card-back {
+    background-color: #c5b720;
+    color: #faf6f6ce;
+    transform: rotateY(180deg);
+    border-radius: 50%;
+    padding-top: 30px;
+    font-weight: bold;
+  }
