--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -438,3 +438,41 @@ header {
     .contact-info h2 {
         padding-bottom: 20px;
     }
+
+    /*-----------------------------Enquiry Page---*/
+
+    .landing-page {
+        background: url("../images/background2.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 80vh;
+    }
+
+    .thankyou-container {
+        position: relative;
+        border: solid;
+        border-color:#b10303;
+        border-radius: 80%;
+        background-color:rgba(255,0,0,0.4);
+        margin: 50px;
+        width: 90vw;;
+        height: 60vh;
+        align-content:center;
+        padding: 5%;
+        
+    }
+
+    .message-container {
+        color: #faf6f6ce;
+        font-size:26px;
+        font-weight: bold;
+        text-align:center;
+    
+    }
+
+    .message-container h2 {
+        font-size: 40px;
+        font-weight: bold;
+        padding-bottom: 10px;
+    }
