--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap')
-
 
 /*-----------------------------General Classes---*/
 
@@ -37,7 +35,7 @@ header {
     margin-top: 30px;
     font-size: 30px;
     font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
     color: #faf6f6ce;
 }
@@ -65,7 +63,7 @@ header {
     text-decoration:none;
     height: 120px;
     font-size: 22px;
-    font-family: 'Open Sans', sans-serif ;
+    font-family:Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
@@ -79,7 +77,7 @@ header {
     height: 120px;
     color: #faf6f6ce;
     font-size: 26px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
 }
 
@@ -90,7 +88,7 @@ header {
 .footer-common i {
     color: #faf6f6ce;
     font-size: 26px;
-    font-family: 'Open Sans', sans-serif;
+    font-family:Arial, Helvetica, sans-serif ;
     padding: 4px;
 }
 
@@ -198,7 +196,7 @@ header {
 .testimonials-header{
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #b10303;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -237,7 +235,7 @@ header {
 .why-book-with-us-header {
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #b10303;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -254,7 +252,7 @@ header {
     text-transform: uppercase;
     padding: 20px;
     font-size: 24px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .valueitem i {
@@ -274,7 +272,7 @@ header {
 .destinations-header {
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #b10303;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -380,7 +378,7 @@ header {
     border-radius: 50%;
     padding-top: 30px;
     font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
   /*-----------------------------Enquiry Page---*/
@@ -477,7 +475,7 @@ header {
         color: #faf6f6ce;
         font-size:26px;
         font-weight: bold;
-        font-family: 'Open Sans', sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         text-align:center;
     
     }
@@ -485,6 +483,6 @@ header {
     .message-container h2 {
         font-size: 40px;
         font-weight: bold;
-        font-family: 'Open Sans', sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         padding-bottom: 10px;
     }
