--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,16 +32,15 @@ header {
     justify-content: center;
     align-items: center;
     text-transform: uppercase;
-    margin-top: 30px;
-    font-size: 30px;
+    margin-top: 20px;
+    font-size: 20px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 2px;
     color: #faf6f6ce;
 }
 
 .tel_no a {
-    font-size: 30px;
+    font-size: 20px;
     margin: 4px;
     color: #faf6f6ce;
 }
@@ -50,26 +49,31 @@ header {
     color: #c5b720;
 }
 
-.menuitem {
-    float: left;
-    height:120px;
-    padding: 0;
-    padding-top: 30px;
+.navbar-style {
+    font-size: 20px;
 }
 
-.menuitem a {
-    color:#faf6f6ce;
-    width: 100%;
-    text-decoration:none;
+.navbar-style a {
+     color: #faf6f6ce;
+}
+
+.nav-item {
     height: 120px;
-    font-size: 22px;
-    font-family:Arial, Helvetica, sans-serif;
-    text-align: center;
 }
 
-.menuitem a:hover {
+.nav-item:hover {
+    background-color: rgba(255,0,0,0.2);
+}
+
+.nav-link {
+    width: 100%;
+    height: 120px;
+}
+
+.nav-link:hover {
     color: #c5b720;
 }
+
 
 /*-----------------------------Footer---*/
 
@@ -176,7 +180,7 @@ header {
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: rgba(255,0,0,0.1);
 }
 
 /* Fading animation */
