--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,93 +107,12 @@ header {
 
 /*-----------------------------HomePAge Slider/ Code obtained https://www.w3schools.com/howto/howto_css_flip_card.asp, editted to suit my website needs---*/
 
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  width: 1000px;
-  height: 600px;
-  position: relative;
-  overflow: hidden;
-  margin: auto;
-  padding-top: 30px;
+.carousel-item img {
+    max-width:1200px;
+    max-height:600px;
+    margin: auto;
+    
 }
-
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: #faf6f6ce;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #b10303;
-  font-size: 30px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #faf6f6ce;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: rgba(255,0,0,0.1);
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
 
 /*-----------------------------HomePage-Testimonials---*/
 
