--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,9 +309,9 @@ header {
 
     .enquiry-form {
         position:relative;
-        width: 60%;
+        width: 80%;
         height: auto;
-        padding: 30px;
+        padding: 20px;
         color: #faf6f6ce;
         text-align: center;
         border:solid;
@@ -319,6 +319,18 @@ header {
         border-radius: 10%;
         background-color: rgba(255,0,0,0.4);
         font-family: 'Open Sans', sans-serif;
+    }
+
+    @media (max-width: 576px) {
+        .enquiry-form {
+            width: 90%;
+        }
+    }
+
+    @media (max-width: 400px) {
+        .enquiry-form {
+            width: 100%;
+        }
     }
 
     label {
@@ -338,7 +350,7 @@ header {
     }
 
     .btn-enquiry {
-        width: 200px;
+        width: 40%;
         height: 50px;
         color:#faf6f6ce;
         background-color:#b10303;
@@ -347,6 +359,12 @@ header {
         bottom: 50px;
         right: 140px;
     
+    }
+
+    @media (max-width:600px) {
+        .btn-enquiry {
+            width: 160px;
+        }
     }
 
     .btn-enquiry:hover {
@@ -362,7 +380,7 @@ header {
         padding-bottom: 20px;
     }
 
-    /*-----------------------------Enquiry Page---*/
+    /*-----------------------------Landing Page---*/
 
     .landing-page {
         background: url("../images/background2.jpg");
@@ -370,6 +388,7 @@ header {
         background-size: cover;
         width: 100%;
         height: 80vh;
+        padding-top: 20px;
     }
 
     .thankyou-container {
@@ -378,17 +397,15 @@ header {
         border-color:#b10303;
         border-radius: 80%;
         background-color:rgba(255,0,0,0.4);
-        margin: 50px;
-        width: 90vw;;
-        height: 60vh;
+        width: 90%;
+        height: 70vh;
         align-content:center;
-        padding: 5%;
-        
+        margin: auto;
     }
 
     .message-container {
         color: #faf6f6ce;
-        font-size:26px;
+        font-size:20px;
         font-weight: bold;
         font-family: Arial, Helvetica, sans-serif;
         text-align:center;
@@ -399,5 +416,4 @@ header {
         font-size: 40px;
         font-weight: bold;
         font-family: Arial, Helvetica, sans-serif;
-        padding-bottom: 10px;
     }
