--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,13 @@
     padding: 50px;
 }
 
+@media (max-width:576px) {
+    .main-headers {
+        font-size: 20px;
+        padding: 30px;
+    }
+}
+
 
 /*-----------------------------Header---*/
 
@@ -36,6 +43,12 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     height: 120px;
+}
+
+@media (max-width:576px) {
+    .logo {
+        display: none;
+    }
 }
 
 .tel_no {
