--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,6 @@
     }
 }
 
-
 /*-----------------------------Header---*/
 
 header {
@@ -136,6 +135,16 @@ header {
     color: #c5b720;
 }
 
+@media (max-width:768px) {
+
+    .md-footer-d {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 30px;
+    }
+}
+
 
 /*-----------------------------HomePAge Slider/ Code obtained from bootstrap and edited---*/
 
@@ -202,22 +211,6 @@ header {
     height: 100%;
 }
 
-.destinations-header {
-    font-size: 50px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #b10303;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    text-align:-webkit-center;
-    padding-top:20px;
-}
-
-.destinations-header i {
-    padding: 30px;
-    font-size: 75px;
-}
-
 .deal-type-container {
     position: relative;
     width: 100%;
@@ -269,6 +262,17 @@ header {
     
 }
 
+@media (min-width: 1250px) {
+    .multi-type-container img {
+        width: 400px;
+        height: 400px;
+        padding:20px;
+        border-radius: 50%;
+        background-color: #b10303;
+        
+    }
+}
+
 /*-----------------------------Destinations Page/ Flip Card, Code obtained https://www.w3schools.com/howto/howto_css_flip_card.asp, editted to suit my website needs---*/
 
 
@@ -283,6 +287,7 @@ header {
     position: relative;
     width: 100%;
     height: 100%;
+    border-radius: 50%;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
@@ -311,9 +316,27 @@ header {
     color: #faf6f6ce;
     transform: rotateY(180deg);
     border-radius: 50%;
-    padding-top: 30px;
+    padding-top: 25%;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+  }
+
+  @media (min-width: 1250px) {
+    .flip-card {
+        background-color: transparent;
+        width: 400px;
+        height: 400px;
+        perspective: 1000px; 
+    }
+
+      .flip-card-back {
+        background-color: #c5b720;
+        color: #faf6f6ce;
+        transform: rotateY(180deg);
+        border-radius: 50%;
+        padding-top: 30%;
+    }
+
   }
 
   /*-----------------------------Enquiry Page---*/
@@ -323,7 +346,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     width:100%;
-    height:auto;
+    height:100%;
     padding:50px;
   }
 
@@ -394,6 +417,7 @@ header {
     .contact-info {
         color: #faf6f6ce;
         letter-spacing: 2px;
+        padding-top: 50%;
     }
 
     .contact-info h2 {
