--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,18 @@
     }
 }
 
+.btn-back {
+    position:absolute;
+    right: 2%;
+    top: 86%;
+    color: #b10303;
+    font-size: 30px;
+}
+
+.btn-back:hover {
+    color: #c5b720;
+}
+
 /*-----------------------------Header---*/
 
 header {
@@ -118,10 +130,6 @@ header {
 
 /*-----------------------------Footer---*/
 
-footer {
-    margin-top: 20px;
-}
-
 .footer-common {
     height: 120px;
     color: #faf6f6ce;
@@ -204,6 +212,7 @@ footer {
 
 .why-book-with-us {
     width: 100%;
+    margin-bottom: 18px;
 }
 
 .valueitem {
@@ -253,19 +262,6 @@ footer {
     font-size: 20px;
     color: #faf6f6ce;
 }
-
-.btn-back {
-    position:absolute;
-    right: 2%;
-    top: 90%;
-    color: #b10303;
-    font-size: 30px;
-}
-
-.btn-back:hover {
-    color: #c5b720;
-}
-
 
 .btn-see-deals {
     position: absolute;   
